Attempt at fixing Server crash: Remote Toolkit: java.lang.OutOfMemoryError: GC overhead limit exceeded https://github.com/mushroomhostage/exphc/issues/63